--- a/src/app/[numeOras]/[Oras]/page.module.css
+++ b/src/app/[numeOras]/[Oras]/page.module.css
@@ -1,3 +1,122 @@
-.dezastruNatural{
-    padding: 20px;
+
+.containerOras{
+    background-color: rgb(9, 9, 49);
+}
+.innerDiv{
+    width: 1200px;
+    max-width: 90vw;
+    margin: auto;
+    background-color: rgb(9, 9, 49);
+    padding: 20px 0;
+    
+}
+
+.button{
+    display: inline-block;
+    background-color: rgb(212, 255, 0);
+    padding: 15px 25px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 10px 0;
+    margin-right: 20px;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.innerDiv > h1{
+    text-align: center;
+    color: white;
+}
+
+.informatiiGenerale{
+    color: white;
+    margin-top: 20px;
+    line-height: 25px;
+}
+
+.containerComponentGrid2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    background-color: white;
+    margin: 20px 0;
+    padding: 15px 15px;
+}
+
+.prognozaDeAstaziGrid, .dezastruNaturalGrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 15px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+
+.containerComponentGrid{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+    border-radius: 20px;
+    background-color: white;
+    margin: 20px 0;
+    padding: 15px;
+}
+
+.vremeaDeAstaziGrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 15px;
+    width: 100%;
+}
+.vremeaDeAstaziGrid > * {
+    padding: 10px 15px;
+}
+
+.containerCasutaGrid, .dezastruNatural{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+    padding: 15px;
+    
+}
+
+.containerCasutaScris{
+    display: flex;
+}
+
+.containerIcon{
+    font-size: 1.5rem;
+    padding: 0 5px;
+    display: flex;
+    align-items: center;
+}
+
+.containerScrisDreapta{
+    display: flex;
+    align-items: center;
+    text-align: end;
+    padding: 0 5px;
+}
+
+
+.containerDezastreNaturale{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    background-color: white;
+    padding: 15px 15px;
+}
+
+@media (max-width: 600px){
+    .vremeaDeAstaziGrid, .prognozaDeAstaziGrid{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
