--- a/src/app/favourites/page.module.css
+++ b/src/app/favourites/page.module.css
@@ -1,3 +1,18 @@
+.containerFavorite{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+
+
 .oras{
-    margin: 10px;
+    margin: 30px;
+}
+
+.oras a{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
 }
